--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
          <h1>My first ever website</h1>
-         <h3>Look mama!! I can push to github</h3>
-         <h3>hello boys</h3>
+         <p>Feeling Happy now</p>
+         <p>I am a ghost</p>
+         
 </body>
 </html>
