--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
          <p>Feeling Happy now</p>
          <p>I am a ghost</p>
          
+         <input type="text">
+         <br>
+         <button>Click me Baby!!</button>
 </body>
 </html>
